@@ -5,8 +5,6 @@ public class LinearScalingConfig {
     public double PERCENT_ADDED_PER_LEVEL;
 
     LinearScalingConfig(Double first) {
-
         PERCENT_ADDED_PER_LEVEL = first;
-
     }
 }
