@@ -3,6 +3,8 @@ package com.robertx22.age_of_exile.uncommon.interfaces.data_items;
 import com.robertx22.age_of_exile.uncommon.utilityclasses.RandomUtils;
 import net.minecraft.item.ItemStack;
 
+import java.util.List;
+
 public interface ISalvagable extends IRarity {
 
     enum SalvageContext {
@@ -10,7 +12,7 @@ public interface ISalvagable extends IRarity {
 
     }
 
-    ItemStack getSalvageResult(float salvageBonus);
+    List<ItemStack> getSalvageResult(float salvageBonus);
 
     boolean isSalvagable(SalvageContext context);
 
