@@ -4,6 +4,7 @@ import com.robertx22.age_of_exile.database.base.CreativeTabs;
 import com.robertx22.age_of_exile.mmorpg.ModRegistry;
 import com.robertx22.age_of_exile.uncommon.interfaces.IWeighted;
 import net.minecraft.item.Item;
+import net.minecraft.item.ItemStack;
 
 import java.util.Arrays;
 import java.util.List;
@@ -21,4 +22,65 @@ public class ItemUtils {
         return (Item) RandomUtils.weightedRandom(list);
 
     }
+
+    public enum Action {
+        SIMULATE, MERGE
+    }
+
+    public static boolean mergeItems(List<ItemStack> itemsToMove, List<ItemStack> places, Action action) {
+
+        int moved = 0;
+
+        boolean failed = false;
+
+        while (moved < itemsToMove.size() && !itemsToMove.isEmpty() && !failed) {
+
+            for (int i = 0; i < places.size(); i++) {
+                ItemStack place = places.get(i);
+                ItemStack move = itemsToMove.get(0);
+
+                if (canMergeItems(move, place)) {
+                    if (action == Action.MERGE) {
+                        ItemStack merged = mergeItems(move, place);
+                        places.set(i, merged);
+                        itemsToMove.remove(0);
+                    } else {
+                        moved++;
+                    }
+                    break;
+                } else {
+                    failed = true;
+                }
+            }
+
+        }
+
+        return itemsToMove.size() == moved;
+    }
+
+    public static ItemStack mergeItems(ItemStack first, ItemStack second) {
+        ItemStack result = second;
+        if (second.isEmpty()) {
+            result = first;
+        } else {
+            result.setCount(second.getCount() + first.getCount());
+        }
+        return result;
+    }
+
+    public static boolean canMergeItems(ItemStack first, ItemStack second) {
+        if (second.isEmpty()) {
+            return true;
+        }
+        if (first.getItem() != second.getItem()) {
+            return false;
+        } else if (first.getDamage() != second.getDamage()) {
+            return false;
+        } else if (first.getCount() + second.getCount() > first.getMaxCount()) {
+            return false;
+        } else {
+            return ItemStack.areTagsEqual(first, second);
+        }
+    }
+
 }
