@@ -44,6 +44,7 @@ This should hopefully stop the bug reports of "I can't heal my friend". But whet
 - added bonus exp stat
 - fix crash on eating foods with effects on server
 - fix death message 
+- gear salvage outputs are now configurable! 
 
 v.1.1.3
 - fix day mobs config not working
